# sefirat-haomer

./: README.md  pyproject.toml
examples/: usage.py
sfirat_haomer/: __init__.py  cli.py  config.py  core.py  data.py  exceptions.py
sfirat_haomer/cli/: __init__.py  main.py
sfirat_haomer/cli/commands/: __init__.py  day_commands.py  info_commands  util_commands.py  week_commands.py
sfirat_haomer/cli/formatters/: __init__.py
sfirat_haomer/cli/validators/: __init__,py  cli_validators.py
sfirat_haomer/exceptions/: __init__.py  base.py  cli_exceptions.py  date_excptions.py  domain_exceptions.py  utils.py  validation_exceptions.py
sfirat_haomer/tests/: test_cli.py  test_core.py
